--- a/package.json
+++ b/package.json
@@ -1,19 +1,30 @@
 {
-  "name" : "radius",
-  "version" : "1.1.4",
-  "description" : "RADIUS packet encoding/decoding",
+  "name": "radius",
+  "version": "1.1.4",
+  "description": "RADIUS packet encoding/decoding",
   "author": "Nearbuy Systems <npm@nearbuysystems.com>",
   "main": "./lib/radius",
   "repository": {
     "type": "git",
     "url": "git://github.com/nearbuy/node-radius.git"
   },
-  "engines": { "node": ">=0.8.0" },
+  "engines": {
+    "node": ">=0.8.0"
+  },
   "devDependencies": {
-    "nodeunit": "~0.8.6"
+    "nodeunit": "~0.8.6",
+    "eslint": "^3.4.0",
+    "eslint-config-airbnb": "^11.0.0",
+    "eslint-config-angular": "^0.5.0",
+    "eslint-plugin-angular": "^1.3.1",
+    "eslint-plugin-import": "^1.14.0",
+    "eslint-plugin-jsx-a11y": "^2.2.1",
+    "eslint-plugin-react": "^6.10.3"
   },
   "scripts": {
     "test": "nodeunit test"
   },
-  "keywords": ["radius"]
+  "keywords": [
+    "radius"
+  ]
 }
